노마드코더 - TypeScript BlockChain 끝

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# build file
+build/
+
 # Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
  
@@ -63,7 +66,7 @@ dist
 # Comment in the public line in if your project uses Gatsby and not Next.js
 # https://nextjs.org/blog/next-9-1#public-directory-support
 # public
- 
+
 # vuepress build output
 .vuepress/dist
  
